# madgraph-auto-dataset

./: madgraph-auto-dataset.cabal
src/HEP/Automation/MadGraph/Dataset/: Common.hs  Desktop.hs  Flux.hs  Processes.hs  SUSY.hs  Set20110224.hs  Set20110228.hs  Set20110301.hs  Set20110302.hs  Set20110302_1.hs  Set20110302_2.hs  Set20110302set3.hs  Set20110302v1.hs  Set20110302v2.hs  Set20110303set1.hs  Set20110303set2.hs  Set20110304set1.hs  Set20110304set2.hs  Set20110307set1.hs  Set20110307set2.hs  Set20110307set2_1.hs  Set20110308set1.hs  Set20110308set2.hs  Set20110311set1.hs  Set20110311set2.hs  Set20110314set1.hs  Set20110315set1.hs  Set20110315set10.hs  Set20110315set11.hs  Set20110315set12.hs  Set20110315set13.hs  Set20110315set14.hs  Set20110315set2.hs  Set20110315set3.hs  Set20110315set4.hs  Set20110315set5.hs  Set20110315set6.hs  Set20110315set7.hs  Set20110315set8.hs  Set20110315set9.hs  (+150 more)
