Name:		madgraph-auto-dataset
Version:	20110302.0
Synopsis:	madgraph-auto-dataset : for ttbar project dataset
Description: 	for ttbar project dataset, I refactored this 
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.4

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, mtl>2, filepath > 1, ttbar>=0.0.2,
                 madgraph-auto > 0.3, directory, process, tagsoup
  Exposed-Modules: 
                   HEP.Automation.MadGraph.Dataset.Set20110224
                   HEP.Automation.MadGraph.Dataset.Set20110228
                   HEP.Automation.MadGraph.Dataset.Set20110301
                   HEP.Automation.MadGraph.Dataset.Set20110302


		 
