Name:		madgraph-auto-dataset
Version:	20110405.4
Synopsis:	madgraph-auto-dataset : dataset used for madgraph-auto event generation
Description: 	datasets for madgraph-auto event generation in 1st quarter of 2011 
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.4

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, mtl>2, filepath > 1,
                 madgraph-auto > 0.3.5, madgraph-auto-model > 0.1.1, 
                 MSSMType > 0.0.1 , bytestring,
                 directory, process, tagsoup
  Exposed-Modules: 
                   HEP.Automation.MadGraph.Dataset.Common
                   HEP.Automation.MadGraph.Dataset.SUSY
                   HEP.Automation.MadGraph.Dataset.Desktop
                   HEP.Automation.MadGraph.Dataset.Flux
                   HEP.Automation.MadGraph.Dataset.Set20110307set2
                   HEP.Automation.MadGraph.Dataset.Set20110405set1
                   HEP.Automation.MadGraph.Dataset.Set20110405set2
                   HEP.Automation.MadGraph.Dataset.Set20110405set3

--                   HEP.Automation.MadGraph.Dataset.Set20110224
--                   HEP.Automation.MadGraph.Dataset.Set20110228
--                   HEP.Automation.MadGraph.Dataset.Set20110301
--                   HEP.Automation.MadGraph.Dataset.Set20110302v1
--                   HEP.Automation.MadGraph.Dataset.Set20110302v2
--                   HEP.Automation.MadGraph.Dataset.Set20110302set3
--                   HEP.Automation.MadGraph.Dataset.Set20110303set1
--                   HEP.Automation.MadGraph.Dataset.Set20110303set2
--                   HEP.Automation.MadGraph.Dataset.Set20110304set1
--                   HEP.Automation.MadGraph.Dataset.Set20110304set2
--                   HEP.Automation.MadGraph.Dataset.Set20110307set1

--                   HEP.Automation.MadGraph.Dataset.Set20110308set1
--                   HEP.Automation.MadGraph.Dataset.Set20110308set2
--                   HEP.Automation.MadGraph.Dataset.Set20110311set1
--                   HEP.Automation.MadGraph.Dataset.Set20110311set2
--                   HEP.Automation.MadGraph.Dataset.Set20110314set1
--                   HEP.Automation.MadGraph.Dataset.Set20110315set1
--                   HEP.Automation.MadGraph.Dataset.Set20110315set2
--                   HEP.Automation.MadGraph.Dataset.Set20110315set3
--                   HEP.Automation.MadGraph.Dataset.Set20110315set4
--                   HEP.Automation.MadGraph.Dataset.Set20110315set5
--                  HEP.Automation.MadGraph.Dataset.Set20110315set6
--                   HEP.Automation.MadGraph.Dataset.Set20110315set7
--                   HEP.Automation.MadGraph.Dataset.Set20110315set8
--                   HEP.Automation.MadGraph.Dataset.Set20110315set9
--                   HEP.Automation.MadGraph.Dataset.Set20110315set10
--                   HEP.Automation.MadGraph.Dataset.Set20110315set11
--                   HEP.Automation.MadGraph.Dataset.Set20110315set12
--                   HEP.Automation.MadGraph.Dataset.Set20110315set13
--                   HEP.Automation.MadGraph.Dataset.Set20110315set14
--                   HEP.Automation.MadGraph.Dataset.Set20110316set1
--                   HEP.Automation.MadGraph.Dataset.Set20110316set2
--                   HEP.Automation.MadGraph.Dataset.Set20110316set3
--                   HEP.Automation.MadGraph.Dataset.Set20110316set4
--                   HEP.Automation.MadGraph.Dataset.Set20110316set5
--                   HEP.Automation.MadGraph.Dataset.Set20110316set6
--                   HEP.Automation.MadGraph.Dataset.Set20110316set7
--                   HEP.Automation.MadGraph.Dataset.Set20110316set8
--                   HEP.Automation.MadGraph.Dataset.Set20110316set9
--                   HEP.Automation.MadGraph.Dataset.Set20110316set10
--                   HEP.Automation.MadGraph.Dataset.Set20110316set11
--                   HEP.Automation.MadGraph.Dataset.Set20110316set12
--                   HEP.Automation.MadGraph.Dataset.Set20110316set13
--                   HEP.Automation.MadGraph.Dataset.Set20110316total1
--                   HEP.Automation.MadGraph.Dataset.Set20110316total2
--                   HEP.Automation.MadGraph.Dataset.Set20110317set1
--                   HEP.Automation.MadGraph.Dataset.Set20110320set1
--                   HEP.Automation.MadGraph.Dataset.Set20110320set2
--                   HEP.Automation.MadGraph.Dataset.Set20110320set3
--                   HEP.Automation.MadGraph.Dataset.Set20110320set4
--                   HEP.Automation.MadGraph.Dataset.Set20110321set1
--                   HEP.Automation.MadGraph.Dataset.Set20110321set2



		 
